Modificacion Hero y Case studies
Se modifica y acomoda seccion de Hero y Case studies

--- a/index.html
+++ b/index.html
@@ -55,11 +55,15 @@
       </div>
 
       <div class="logo_container">
+        <div class="first_image">
         <img src="images/clickup.svg" alt="ClickUp" />
         <img src="images/dropbox.svg" alt="Dropbox" />
         <img src="images/paychex.svg" alt="PAYCHEX" />
+        </div>
+        <div class="second_image">
         <img src="images/elastic.svg" alt="Elastic" />
         <img src="images/stripe.svg" alt="Stripe" />
+        </div>
       </div>
     </div>
 
@@ -208,6 +212,7 @@
           </div>
         </div>
     </div>
+  </div>  
 
     <div class="Recent_work">
       <div class="Recent_h">
